# crisis-inteligent-pipeline

./: .gitignore  Makefile  pyproject.toml
config/: config.yaml  models.yaml
utils/: config_loader.py  llm_client.py  router.py
